# GenericIntegrationServer

./: .actrc  .core_env  .coverage  .docker_env  .dockerignore  .gitconfig_container  .gitignore  CHANGELOG  GAP_ANALYSIS_2025_08_16.md  README.md  TESTING_GUIDE.md  TODO_CleverBrag_Integration  celerybeat-schedule  check_codebase.sh  clear_auth.js  container_rebuild_steps.md  devcontainer_improvements.md  devcontainer_permission_fix.md  docker-compose.yml  docker_fixes.md  err.txt  frontend_recovery_options.md  init_system.sh  kill_servers.sh  manage_system.sh  mypy.ini  package-lock.json  package.json  poetry.toml  pyproject.toml  pytest.ini  run.sh  sample.env  setup_pnpm.sh  simple_start.sh  smart_start.sh  start_core_services.sh  start_venv_system.sh  status_system.sh  stop_venv_system.sh
.cursor/rules/: groundrules.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  web-ci.yml  worker.yml
LegacyCode/: CHANGELOG.md  TODO_R2R_INTEGRATION.md
LegacyCode/backend/: Dockerfile
LegacyCode/scripts/: copy_to_new_integration_server.ps1
TODO/: TODO_CleverBrag_Integration  TODO_FULL_PARITY
backend/: alembic.ini  deps.py  legacy_context.py  log_config.py  logging.py  main.py  settings.py
backend/auth/: api_key.py  crypto.py  db_provider.py  factory.py  interfaces.py  keycloak_provider.py  schemas.py
backend/connectors/: credentials_provider.py
backend/db/: api_key.py  base.py  cc_pairs.py  migration_utils.py  models.py  monitoring.py  query_optimization.py  retry.py  rls.py  session.py  startup.py
backend/destinations/: __init__.py  base.py  cleverbrag.py  csvdump.py  onyx.py
backend/monitoring/: __init__.py  alerting.py  collector.py  destination_metrics.py
backend/orchestrator/: __init__.py  cc_pair_scheduler.py  cc_pair_tasks.py  scheduler.py  (+2 more)
connectors/: __init__.py
docs/: testing.md
monitoring/: README.md  docker-compose.monitoring.yml
onyx/: __init__.py
requirements/: default.txt  dev.txt
shared_configs/: __init__.py
tests/: conftest.py  test_api_key_db.py  test_auth.py  test_auth_db_provider.py  test_auth_routes_simple.py  test_cc_pair_models.py  test_cc_pair_schemas.py  test_cleverbrag_destination.py  test_connector_import.py  test_db_performance_indexes.py  test_deps.py  test_deps_comprehensive.py  test_destinations_csvdump.py  test_destinations_onyx.py  test_destinations_routes.py  test_health.py  test_oauth_utils.py  test_orchestrator_routes.py  test_phase2_destination_pairing.py  test_phase3_alerting.py  test_phase3_monitoring.py  test_profiles.py  test_runner.py  test_scheduler.py  test_security_crypto.py  test_security_enhanced.py  test_startup_db.py  test_sync_runs_routes.py  test_task_utils.py  test_tasks.py
web/: .eslintrc.cjs  .lighthouserc.js  biome.json  index.html  lighthouse.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  vitest.setup.ts
worker/: Dockerfile  README.md
(+330 files in other folders)
