[tool.poetry]
name = "integration-server"
version = "0.1.0"
description = "Multi-tenant integration server leveraging Onyx connectors"
authors = ["Integration Team <team@example.com>"]
readme = "README.md"
packages = [
    { include = "backend" },
    { include = "connectors" },
    { include = "connectors/onyx" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
httpx = "^0.27.0"
email-validator = "^2.2.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
bcrypt = "^4.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
celery = "^5.3.6"
redis = "^5.0.5"
loguru = "^0.7.2"
prometheus-fastapi-instrumentator = "^6.0.0"
# connectors runtime lives inside repo; no separate dependency needed
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
# Connector dependencies (loaded via factory imports)
boto3 = "^1.34.0"  # Required by BlobStorageConnector (S3, R2, GCS, OCI)
google-api-python-client = "^2.0.0"  # Required by Gmail, Drive, Sites connectors
google-auth = "^2.0.0"  # Required by Google connectors
google-auth-oauthlib = "^1.0.0"  # Required by Google OAuth connectors
pyairtable = "^2.0.0"  # Required by Airtable connector

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
ruff = "^0.4.0"
mypy = "^1.9.0"
testcontainers = {extras = ["postgresql", "redis"], version = "^3.7.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = ["LegacyCode/*"]

[tool.ruff.lint]
ignore = ["F401", "F811", "E402", "E401", "E702"] 